--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
     <title>Natours | Exciting tours for adventurous people</title>
-  </head>git s
+  </head>
 
   <body>
     <header class="header">
@@ -31,12 +31,12 @@
       </div>
     </header>
 
-    <section class="grid-test">
+    <section class="grid">
       <div class="row">
-        <div class="col-1-of-2">col-1-of-2</div>
-        <div class="col-1-of-2">col-1-of-2</div>
+        <div class="col-1-of-3">col-1-of-3</div>
+        <div class="col-1-of-3">col-1-of-3</div>
+        <div class="col-1-of-3">col-1-of-3</div>
       </div>
     </section>
-    
   </body>
 </html>
