--- a/index.html
+++ b/index.html
@@ -31,12 +31,41 @@
       </div>
     </header>
 
-    <section class="grid">
-      <div class="row">
-        <div class="col-1-of-3">col-1-of-3</div>
-        <div class="col-1-of-3">col-1-of-3</div>
-        <div class="col-1-of-3">col-1-of-3</div>
-      </div>
-    </section>
+    <main>
+      <section class="section-about">
+        <div class="center-div margin-bottom-h">
+          <h2 class="heading-secondary">
+            Exciting tours for advanturous people
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary margin-bottom-s">You're gonna fall in love with nature</h3>
+            <p class="paragraph">
+              Incididunt amet ex aliquip ea labore laboris nulla veniam sit exercitation 
+              amet commodo nisi. Non magna cillum labore amet non aliquip pariatur tempor jj
+            </p>
+            
+            <h3 class="heading-tertiary margin-bottom-s">live advantures like you have never before</h3>
+            <p class="paragraph">
+              Incididunt amet ex aliquip ea labore laboris nulla veniam sit exercitation 
+              amet commodo nisi. Non magna cillum labore amet non aliquip pariatur tempor
+              enim. Est nostrud laboris sunt eu ipsum Lorem ea mollit enim consequat ipsum
+            </p>
+            <a href="#" class="btn-text">learn more &rarr;</a>
+          </div>
+          <div class="col-1-of-2">
+            <div class="composition">
+              <img src="img/nat-1.jpg" alt="nature image" class="composition__photo">
+              <img src="img/nat-2.jpg" alt="nature image" class="composition__photo">
+              <img src="img/nat-3.jpg" alt="nature image" class="composition__photo">
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!-- <section class="grid">
+    </section> -->
   </body>
 </html>
