--- a/index.html
+++ b/index.html
@@ -63,6 +63,50 @@
           </div>
         </div>
       </section>
+      <section class="section-features">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tertiary margin-bottom-s">Explore the world</h3>
+              <p class="feature-box__paragraph"> 
+                Et qui proident cillum voluptate ullamco nisi ut id dolor irure labore.
+                Et qui proident cillum voluptate ullamco nisi ut id dolor irure labore.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+            <i class="feature-box__icon icon-basic-compass"></i>
+            <h3 class="heading-tertiary margin-bottom-s">find your way</h3>
+            <p class="feature-box__paragraph"> 
+              Et qui proident cillum voluptate ullamco nisi ut id dolor irure labore.
+              Et qui proident cillum voluptate ullamco nisi ut id dolor irure labore.
+            </p>
+          </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+            <i class="feature-box__icon icon-basic-map"></i>
+            <h3 class="heading-tertiary margin-bottom-s">meet nature</h3>
+            <p class="feature-box__paragraph"> 
+              Et qui proident cillum voluptate ullamco nisi ut id dolor irure labore.
+              Et qui proident cillum voluptate ullamco nisi ut id dolor irure labore.
+            </p>
+          </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+            <i class="feature-box__icon icon-basic-heart"></i>
+            <h3 class="heading-tertiary margin-bottom-s">live a healthier life</h3>
+            <p class="feature-box__paragraph"> 
+              Et qui proident cillum voluptate ullamco nisi ut id dolor irure labore.
+              Et qui proident cillum voluptate ullamco nisi ut id dolor irure labore.
+            </p>
+          </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- <section class="grid">
