build the front face of the card tours

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h3 class="heading-tertiary margin-bottom-s">You're gonna fall in love with nature</h3>
             <p class="paragraph">
               Incididunt amet ex aliquip ea labore laboris nulla veniam sit exercitation 
-              amet commodo nisi. Non magna cillum labore amet non aliquip pariatur tempor jj
+              amet commodo nisi. Non magna cillum labore amet non aliquip pariatur tempor
             </p>
             
             <h3 class="heading-tertiary margin-bottom-s">live advantures like you have never before</h3>
@@ -63,7 +63,7 @@
           </div>
         </div>
       </section>
-      <section class="section-features">
+      <section class="section-features ">
         <div class="row">
           <div class="col-1-of-4">
             <div class="feature-box">
@@ -105,6 +105,72 @@
             </p>
           </div>
           </div>
+        </div>
+      </section>
+      <section class="section-tours ">
+        <div class="center-div margin-bottom-h">
+          <h2 class="heading-secondary">
+            Most popular tours
+          </h2>
+        </div>
+        <div class="row">
+
+
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front">
+                <div class="card__image card__image--1"> &nbsp; </div>
+                <h4 class="card__header">
+                  <span class="card__header-span card__header-span--1">the sea explorer</span>
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>3 days tour</li>
+                    <li>up to 30 people</li>
+                    <li>2 tour guides</li>
+                    <li>sleep in cozy hostels</li>
+                    <li>difficulty : very easy</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back--1">
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front">
+                <div class="card__image card__image--2"> &nbsp; </div>
+                <h4 class="card__header">
+                  <span class="card__header-span card__header-span--2">the sea explorer</span>
+                </h4>
+                <div class="card__details">
+                  
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back--2">
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front">
+                <div class="card__image card__image--3"> &nbsp; </div>
+                <h4 class="card__header">
+                  <span class="card__header-span card__header-span--3">the sea explorer</span>
+                </h4>
+                <div class="card__details"></div>
+              </div>
+              <div class="card__side card__side--back card__side--back--3">
+              </div>
+            </div>
+          </div>
+
+
         </div>
       </section>
     </main>
