--- a/index.html
+++ b/index.html
@@ -134,6 +134,13 @@
                 </div>
               </div>
               <div class="card__side card__side--back card__side--back--1">
+                <div class="card__cta">
+                  <div class="card__price-box">
+                      <p class="card__price-only">Only</p>
+                      <p class="card__price-value">$279</p>
+                  </div>
+                  <a href="#" class="btn btn--white"> Book now! </a>
+                </div>
               </div>
             </div>
           </div>
@@ -147,10 +154,23 @@
                   <span class="card__header-span card__header-span--2">the sea explorer</span>
                 </h4>
                 <div class="card__details">
-                  
+                  <ul>
+                    <li>5 days tour</li>
+                    <li>up to 15 people</li>
+                    <li>2 tour guides</li>
+                    <li>sleep in provided tents</li>
+                    <li>difficulty : medium</li>
+                  </ul>
                 </div>
               </div>
               <div class="card__side card__side--back card__side--back--2">
+                <div class="card__cta">
+                  <div class="card__price-box">
+                      <p class="card__price-only">Only</p>
+                      <p class="card__price-value">$399</p>
+                  </div>
+                  <a href="#" class="btn btn--white"> Book now! </a>
+                </div>
               </div>
             </div>
           </div>
@@ -163,15 +183,34 @@
                 <h4 class="card__header">
                   <span class="card__header-span card__header-span--3">the sea explorer</span>
                 </h4>
-                <div class="card__details"></div>
+                <div class="card__details">
+                  <ul>
+                    <li>7 days tour</li>
+                    <li>up to 20 people</li>
+                    <li>2 tour guides</li>
+                    <li>sleep in provided tents</li>
+                    <li>difficulty : hard</li>
+                  </ul>
+                </div>
               </div>
               <div class="card__side card__side--back card__side--back--3">
+                <div class="card__cta">
+                  <div class="card__price-box">
+                      <p class="card__price-only">Only</p>
+                      <p class="card__price-value">$439</p>
+                  </div>
+                  <a href="#" class="btn btn--white"> Book now! </a>
+                </div>
               </div>
             </div>
           </div>
 
-
         </div>
+
+        <div class="center-div margin-top-h">
+          <a href="#" class="btn btn--green">discover all tours</a>
+        </div>
+
       </section>
     </main>
 
