--- a/index.html
+++ b/index.html
@@ -273,9 +273,61 @@
           <a href="#" class="btn-text">read all stories </a>
         </div>
       </section>
-    </main>
 
-    <!-- <section class="grid">
-    </section> -->
+      <div class="section-booking">
+        <div class="row">
+          <div class="book">
+            
+            <div class="book__form">
+              <div class="center-div margin-bottom-s">
+                <h2 class="heading-secondary">
+                  Most popular tours
+                </h2>
+              </div>
+
+              <form action="#" class="form">
+
+                <div class="form__group">
+                  <input type="text" class="form__input" placeholder="Full name" required>
+                  <label for="" class="form__label">Full name</label>
+                </div>
+
+                <div class="form__group">
+                  <input type="email" class="form__input" placeholder="Email">
+                  <label for="" class="form__label">E-mail address</label>
+                </div>
+
+                <div class="form__group margin-bottom-m ">
+
+                  <div class="form__radio-group">
+                    <input class="form__radio-input" type="radio" id="small" name="size" >
+                    <label for="small" class="form__radio-label">
+                      <span class="form__radio-button"></span>
+                      small tour package
+                    </label>
+                  </div>
+
+                  <div class="form__radio-group"> 
+                    <input class="form__radio-input" type="radio" id="large" name="size" >
+                    <label for="large" class="form__radio-label">
+                      <span class="form__radio-button"></span>
+                      large tour package
+                    </label>
+                  </div>
+
+                </div>
+                
+                <div class="form__group">
+                  <button class="btn btn--green" type="submit">
+                    Next step &rarr;
+                  </button>
+                </div>  
+
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
