build the footer

--- a/index.html
+++ b/index.html
@@ -329,5 +329,32 @@
         </div>
       </div>
     </main>
+    <footer class="footer">
+      <div class="footer__logo-box center-div margin-bottom-m">
+        <img class="footer__logo" src="img/logo-green-2x.png" alt="footer logo">
+      </div>
+      <div class="row">
+
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__list-item"><a href="#" class="footer__link">Company</a></li>
+              <li class="footer__list-item"><a href="#" class="footer__link">Contact Us</a></li>
+              <li class="footer__list-item"><a href="#" class="footer__link">Carrers</a></li>
+              <li class="footer__list-item"><a href="#" class="footer__link">Privacy Policy</a></li>
+              <li class="footer__list-item"><a href="#" class="footer__link">Terms</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-1-of-2">
+          <div class="footer__copyright">
+            built by me <a href="#" class="footer__link">Khalil chermiti</a> , this showcases my css and styling skills
+            i've learnt all of this through out a udemy course trying charpen my and solidify my knowledge of css and sass 
+          </div>
+        </div>
+
+      </div>
+    </footer>
   </body>
 </html>
