--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
       <nav class="navigation__nav">
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a href="#" class="navigation__link"
+            <a href="#section-about" class="navigation__link"
               ><span>01</span> About Natours</a
             >
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"
+            <a href="#section-features" class="navigation__link"
               ><span>02</span> Your benifits</a
             >
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"><span>03</span> Your tours</a>
+            <a href="#section-tours" class="navigation__link"><span>03</span> Your tours</a>
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"><span>04</span> Stories</a>
+            <a href="#section-stories" class="navigation__link"><span>04</span> Stories</a>
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"><span>05</span> Book now</a>
+            <a href="#section-booking" class="navigation__link"><span>05</span> Book now</a>
           </li>
         </ul>
       </nav>
@@ -63,7 +63,7 @@
     </header>
 
     <main>
-      <section class="section-about">
+      <section id="section-about" class="section-about">
         <div class="center-div margin-bottom-h">
           <h2 class="heading-secondary">
             Exciting tours for advanturous people
@@ -113,7 +113,7 @@
         </div>
       </section>
 
-      <section class="section-features">
+      <section id="section-features" class="section-features">
         <div class="row">
           <div class="col-1-of-4">
             <div class="feature-box">
@@ -166,7 +166,7 @@
         </div>
       </section>
 
-      <section class="section-tours">
+      <section id="section-tours" class="section-tours">
         <div class="center-div margin-bottom-h">
           <h2 class="heading-secondary">Most popular tours</h2>
         </div>
@@ -196,7 +196,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$279</p>
                   </div>
-                  <a href="#" class="btn btn--white"> Book now! </a>
+                  <a href="#popup" class="btn btn--white"> Book now! </a>
                 </div>
               </div>
             </div>
@@ -227,7 +227,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$399</p>
                   </div>
-                  <a href="#" class="btn btn--white"> Book now! </a>
+                  <a href="#popup" class="btn btn--white"> Book now! </a>
                 </div>
               </div>
             </div>
@@ -258,7 +258,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$439</p>
                   </div>
-                  <a href="#" class="btn btn--white"> Book now! </a>
+                  <a href="#popup" class="btn btn--white"> Book now! </a>
                 </div>
               </div>
             </div>
@@ -270,7 +270,7 @@
         </div>
       </section>
 
-      <section class="section-stories">
+      <section id="section-stories" class="section-stories">
         <div class="bg-video">
           <video class="bg-video__content" autoplay muted loop>
             <source src="img/video.mp4" type="video/mp4" />
@@ -340,7 +340,7 @@
         </div>
       </section>
 
-      <div class="section-booking">
+      <div id="section-booking" class="section-booking">
         <div class="row">
           <div class="book">
             <div class="book__form">
@@ -445,5 +445,36 @@
         </div>
       </div>
     </footer>
+    
+    <div class="popup" id="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="img/nat-8.jpg" alt="" class="popup__img">
+          <img src="img/nat-9.jpg" alt="" class="popup__img">
+        </div> 
+        <div class="popup__right">
+          <a href="#section-tours" class="popup__close">&times;</a>
+          <h2 class="heading-secondary margin-bottom-s">Start booking now</h2>
+          <h3 class="heading-tertiary margin-bottom-s">Important &excl; read these terms first</h3>
+          <p class="popup__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Consequatur fugiat odit commodi aut aliquam. Repellendus, commodi!
+            Id obcaecati nostrum autem quasi architecto consectetur eum!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Consequatur fugiat odit commodi aut aliquam. Repellendus, commodi!
+            Id obcaecati nostrum autem quasi architecto consectetur eum!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Consequatur fugiat odit commodi aut aliquam. Repellendus, commodi!
+            Id obcaecati nostrum autem quasi architecto consectetur eum!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Consequatur fugiat odit commodi aut aliquam. Repellendus, commodi!
+            Id obcaecati nostrum autem quasi architecto consectetur eum!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          </p>
+          <a href="" class="btn btn--green">Book now</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
