buid media query manager ** made these components responsive : * typography * pages * layout * section about , features and tours

--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
                 Et qui proident cillum voluptate ullamco nisi ut id dolor irure
                 labore. Et qui proident cillum voluptate ullamco nisi ut id
                 dolor irure labore.
+                Et qui proident cillum voluptate ullamco nisi ut id dolor irure
+                labore. Et qui proident cillum voluptate ullamco nisi ut id
+                dolor irure labore.
               </p>
             </div>
           </div>
@@ -133,6 +136,9 @@
               <i class="feature-box__icon icon-basic-compass"></i>
               <h3 class="heading-tertiary margin-bottom-s">find your way</h3>
               <p class="feature-box__paragraph">
+                Et qui proident cillum voluptate ullamco nisi ut id dolor irure
+                labore. Et qui proident cillum voluptate ullamco nisi ut id
+                dolor irure labore.
                 Et qui proident cillum voluptate ullamco nisi ut id dolor irure
                 labore. Et qui proident cillum voluptate ullamco nisi ut id
                 dolor irure labore.
@@ -147,6 +153,9 @@
                 Et qui proident cillum voluptate ullamco nisi ut id dolor irure
                 labore. Et qui proident cillum voluptate ullamco nisi ut id
                 dolor irure labore.
+                Et qui proident cillum voluptate ullamco nisi ut id dolor irure
+                labore. Et qui proident cillum voluptate ullamco nisi ut id
+                dolor irure labore.
               </p>
             </div>
           </div>
@@ -157,6 +166,9 @@
                 live a healthier life
               </h3>
               <p class="feature-box__paragraph">
+                Et qui proident cillum voluptate ullamco nisi ut id dolor irure
+                labore. Et qui proident cillum voluptate ullamco nisi ut id
+                dolor irure labore.
                 Et qui proident cillum voluptate ullamco nisi ut id dolor irure
                 labore. Et qui proident cillum voluptate ullamco nisi ut id
                 dolor irure labore.
