desnity switching with srcset in html

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
       <div class="footer__logo-box center-div margin-bottom-m">
         <img
           class="footer__logo"
-          src="img/logo-green-2x.png"
+          srcset="img/logo-green-2x.png 1x , img/logo-green-2x.png 2x" 
           alt="footer logo"
         />
       </div>
